# socket-grpc-experiment

./: .gitignore  Cargo.toml  Readme.md  build.rs
src/grpc-client/: bench.rs  main.rs
src/grpc-client/proto/: voting.proto
src/socket-client/: main.rs
src/socket-server/: main.rs
src/tcp-client/: bench.rs  main.rs
