[package]
name = "socket-grpc-experiment"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "socket-client"
path = "src/socket-client/main.rs"

[[bin]]
name = "socket-server"
path = "src/socket-server/main.rs"

[[bin]]
name = "grpc-client"
path = "src/grpc-client/main.rs"

[[bin]]
name = "tcp-client"
path = "src/tcp-client/main.rs"


[dependencies]
criterion = {version = "0.5.1", features = ["html_reports","async_tokio"]}
prost = "0.12.6"
reqwest = {version="0.12.5", features = ["json"]}
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.11.0"
tower = "0.4.13"

[build-dependencies]
tonic-build = "0.11.0"

[[bench]]
name = "tcp-benchmark"
harness = false
path = "src/tcp-client/bench.rs"

[[bench]]
name = "grpc-benchmark"
harness = false
path = "src/grpc-client/bench.rs"